# cv_library

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env.dev.example  env.example  env.prod.example  manage.py  pyproject.toml  start.sh  start_prod.sh
CVProject/: asgi.py  celery.py  urls.py  wsgi.py
CVProject/settings/: __init__.py  base.py  dev.py  prod.py
celery_tasks/: README.md  __init__.py  app.py
celery_tasks/config/: __init__.py  settings.py
celery_tasks/services/: __init__.py  analysis_service.py  base_service.py  email_service.py  pdf_service.py  sendgrid_service.py  translation_service.py
celery_tasks/tasks/: __init__.py  analysis.py  cleanup.py  email.py  notification.py  pdf.py  statistics.py
celery_tasks/utils/: __init__.py  decorators.py  helpers.py
main/: admin.py  context_processors.py  enums.py  forms.py  models.py  services.py  tests.py  urls.py
main/api/: exceptions.py  mixins.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
main/common/: time.py
main/filters/: cv_filters.py  log_filters.py
main/fixtures/: sample_cvs.json
main/management/commands/: run_celery_beat.py  run_celery_worker.py  run_tasks.py  wait_for_db.py
main/middleware/: __init__.py  auth_debug.py  request_logging.py
main/migrations/: 0001_initial.py  0002_requestlog.py  0003_requestlog_method_choices.py  0004_remove_method_choices.py  0005_cv_owner.py  0006_cv_created_at_cv_updated_at.py  0007_analysislog.py  0008_delete_analysislog.py
main/web/: error_views.py  urls.py  view_handlers.py  views.py
(+12 files in other folders)
